  * Added "texfile" entry in block definition YAML, to support mods
    which use an entire new sheet of textures
  * Support for effectively unlimited block textures
  * Stems now connect to neighboring fruit properly
  * The "C" key will toggle the new-style fence connection rendering,
    introduced in Beta 1.9

Minecraft X-Ray 3.3.3 (2011.09.23)

  * Support for all Beta 1.9 blocks
  * Various rendering improvements to water, glass, glass panes, iron
    bars, fence gates, crops, and slabs (though transparency issues do
	continue to persist)

Minecraft X-Ray 3.3.2 (2011.09.20)

  * Chests render more correctly now
  * Updated Silverfish block to process its data values correctly
  * Fixed an Exception some Windows users were reporting, when choosing
    "Other" from the world selection dialog

Minecraft X-Ray 3.3.1 (2011.09.14)

  * Updated OS detection to be far more accepting (specifically for
    Windows Server 2008, but should be relatively future-proof now)

Minecraft X-Ray 3.3.0 (2011.09.12)

  * Removed redundant information from world selection dialog
  * Added support for opening arbitrary dimensions (for mods right now,
    will also be needed for the eventual official Sky Dimension).  "N"
    now jumps to the next dimension, "P" jumps to the previous.
  * Internal support for block IDs > 127 (for mods, primarily)
  * Blocks which orient differently based on direction will default to
    North now, if we see data values we don't understand
  * Extra block definitions can be loaded from user-supplied YAML files
  * Unknown blocks will show up purple in the minimap
  * Improvements to the rendering of cacti and fences
  * All new Beta 1.8 blocks supported
  * (internal) Updated to LWJGL 2.7.1
  * Reorganization of how X-Ray gets packaged for distribution

Minecraft X-Ray 3.2.2 (2011.09.05)

  * Repackaged due to apparent data corruption in jinput.jar
    Checksums of good jinput.jar:
        md5sum: d62ff8cd9539a32dac094c00e820e9e6